24 Mar 1999
- added Unix98 pty support.
22 Mar 1999
- made a non-glibc2.1 version of the fix below.
- fixed a signal/wait problems related with it.
- changed version number to 0.9.10 thereby disappointing
  all those who desperately hoped, 0.9.9 will be followed
  by 1.0.0 ;)
18 Mar 1999
- added grantpt to prevent eavesdroping the slave tty.
  konsole now depends on at least glibc2.1
03 Mar 1999
- added -name
- Shift-Insert pastes
- added *.kdelnk to be seeked in ~./kde/apps/konsole, too.
03 Feb 1999
- fixed -caption
- some adjustments in geometry management
01 Feb 1999 Matt Gerassimoff <mg@s303.msoe.edu>
- scroll line wise through the history buffer using Shift-Up/Down
31 Jan 1998
- fixed a resizing bug.
30 Jan 1998
- fixed an ANSI compatibility problem.
30 Jan 1998 Kyle Haight <khaight@netcom.com>
- Solaris 2.6 adjustment
30 Jan 1998 Warwick Allison <warwick@troll.no>
- character classes (removing word_characters code)
- "word" selection based on character classes
- "word" selection during selection Extend (double-click-and-drag)
- fixed bug to so that selection stays highlighted
- fixed another, more obscure selection bug 
05 Jan 1998
- improved handling of atypical or moved installations (Martin,Sven,Lars)
- a QString::printf issue resolved (Sven,Lars)
20 Dec 1998 David Faure <David.Faure@insa-lyon.fr
- "-e" added to session management
- slight overall improvements
20 Dec 1998
- fixed or worked around a marking issue in scrollUp/scrollDown.
04 Dec 1998 Alex Zepeda <garbanzo@hooked.net>
- README: Removed comment about beta testing, it's rather irrelevant.
30 Nov 1998
- added DND support
26 Nov 1998
- added xterm-83 patch, vim.schema
20 Nov 1998
- some works on integrating documentation
14 Nov 1998 Peter Silva <peter.silva@kde.org>
- added -vt_sz command line option.
- added Ctrl modifier for text selection without line breaks.
- started working on word-class (just stubs, nothing complete.)  
- documented the Ctrl-modifier, fixed section headings.
09 Nov 1998